Resolvendo problema com o scrollbar

--- a/resource/css/style.css
+++ b/resource/css/style.css
@@ -12,7 +12,6 @@ body {
 #all {
     height: 100vh;
     background: #000;
-    overflow-x: hidden;
 }
 
 #bg {
@@ -71,6 +70,9 @@ h4 {
 @media (max-width: 991px) {
     #bg {
         width: 100%;
+    }
+    #content {
+        overflow-x: hidden;
     }
     .logo {
         width: 30%;
